gcc/testsuite/g++.dg/ext/pr84724-3.C
// PR c++/84724
// { dg-do compile }
// { dg-options "" }

int __builtin_trap ();		// { dg-error "ambiguates built-in declaration" }
